kubernetes/catalog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api
spec:
  selector:
    matchLabels:
      app: catalog-api
  template:
    metadata:
      labels:
        app: catalog-api
    spec:
      containers:
      - name: catalog-api
        image: eshop.catalog.api:latest      
        resources:
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
          - containerPort: 80
