kubernetes/client-authserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-authserver
spec:
  selector:
    matchLabels:
      app: client-authserver
  template:
    metadata:
      labels:
        app: client-authserver
    spec:
      containers:
      - name: client-authserver
        image: eshop.client.authorizationserver:latest     
        resources:
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
          - containerPort: 80
