kubernetes/client-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-portal
  template:
    metadata:
      labels:
        app: client-portal
    spec:
      containers:
        - name: client-portal
          image: eshop.ui.clientportal:latest
          livenessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            initialDelaySeconds: 5          
          resources:
            limits:
              memory: "100Mi"
              cpu: "100m"
