kubernetes/employeemanagement-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeemanagement-api
spec:
  selector:
    matchLabels:
      app: employeemanagement-api
  template:
    metadata:
      labels:
        app: employeemanagement-api
    spec:
      containers:
      - name: employeemanagement-api
        image: eshop.employeemanagement.api:latest    
        resources:
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
          - containerPort: 80
