kubernetes/employeemanagement-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeemanagment-authserver
spec:
  selector:
    matchLabels:
      app: employeemanagment-authserver
  template:
    metadata:
      labels:
        app: employeemanagment-authserver
    spec:
      containers:
      - name: employeemanagment-authserver
        image: eshop.employeemanagement.authorizationserver:latest
        resources:    
          limits:
            memory: "200Mi"
            cpu: "200m"
        ports:
          - containerPort: 80
