kubernetes/sql-api-data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-db
spec:
  selector:
    matchLabels:
      app: api-db
  template:
    metadata:
      labels:
        app: api-db
    spec:
      containers:
        - name: api-db
          image: mcr.microsoft.com/mssql/server:2022-latest   
          ports:
            - containerPort: 1433
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
