kubernetes/catalog-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  catalog-api
spec:
  selector:
    app:  catalog-api
  type:  LoadBalancer
  ports:
  - protocol: 'TCP'
    port:  5035
    targetPort:  80
