kubernetes/sql-api-data-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  api-db
spec:
  selector:
    app:  api-db
  type:  LoadBalancer
  ports:
  - protocol: 'TCP'
    port:  1433
    targetPort:  1433
