kubernetes/client-portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2$3
  name: client-portal-ingress
  labels:
    name: client-portal-ingress
spec:
  tls:
  - hosts:
    - localhost
    secretName: tls-local
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/()()(.*)"
        backend:
          service:
            name: client-portal
            port: 
              number: 80
      - pathType: Prefix
        path: "/catalog(/|$)(.*)"
        backend:
          service:
            name: catalog-api
            port: 
              number: 80
      - pathType: Prefix
        path: /()(authorize)(.*)
        backend:
          service:
            name: client-authserver
            port: 
              number: 80
